@@ -1,3 +1,11 @@
+2004-11-04  Paul Brook  <paul@codesourcery.com>
+
+	* ld.texinfo: Document --default-imported-symver.
+	* ldmain.c (main): Set link_info.default_imported_symver.
+	* lexsup.c (option_values): Add OPTION_DEFAULT_IMPORTED_SYMVER.
+	(ld_options): Add --default-imported-symver.
+	(parse_args): Handle OPTION_DEFAULT_IMPORTED_SYMVER.
+
 2004-11-08  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>
 	    Vineet Sharma      <vineets@noida.hcltech.com>
 
